--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "react-youtube": "^7.11.3"
   },
   "scripts": {
